tests/error/array_oob.gw
#! [contains] ArrayOutofBounds
Object i[1];
i[1];
